# interview_jikkosoft

./: .gitignore  README.md  README_ES.md
challenge_1/: README.md  README_ES.md  schema.sql
challenge_2/: .gitignore  README.md  README_ES.md  main.py  pyproject.toml
challenge_2/src/: __init__.py  two_sum.py
challenge_2/tests/: __init__.py  test_performance.py  test_two_sum.py
challenge_3/: README.es.md  README.md  compose.yml
challenge_3/backend/: .env.example  Dockerfile  README.es.md  README.md  env.example.sh  pyproject.toml  run_tests.sh  test_api.sh
challenge_3/backend/app/: __init__.py  database.py  views.py
challenge_3/backend/app/api/: __init__.py  books.py  deps.py  loans.py  members.py
challenge_3/backend/app/core/: config.py
challenge_3/backend/app/models/: __init__.py  book.py  loan.py  member.py
challenge_3/backend/app/schemas/: __init__.py  book.py  loan.py  member.py
challenge_3/backend/app/services/: __init__.py  library_service.py
challenge_3/backend/tests/: conftest.py  test_books.py
challenge_3/frontend/: .dockerignore  Dockerfile  Dockerfile.bun  README.es.md  README.md  bun.lockb  docker-compose.yml
challenge_3/frontend/src/: styles.scss
challenge_3/frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts
challenge_3/frontend/src/app/features/books/components/: book-edit.component.html  book-edit.component.scss  book-edit.component.ts  book-form.component.html  book-form.component.scss  book-form.component.ts  book-list.component.html  book-list.component.scss  book-list.component.ts
challenge_3/frontend/src/app/features/books/models/: book.model.ts
challenge_3/frontend/src/app/features/books/services/: book.service.ts
challenge_3/frontend/src/app/features/dashboard/components/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
challenge_3/frontend/src/app/features/libraries/components/: library-list.component.ts
challenge_3/frontend/src/app/features/libraries/models/: library.model.ts
challenge_3/frontend/src/app/features/libraries/services/: library.service.ts
challenge_3/frontend/src/app/features/loans/components/: loan-form.component.html  loan-form.component.scss  loan-form.component.ts  loan-list.component.html  loan-list.component.scss  loan-list.component.ts
challenge_3/frontend/src/app/features/loans/models/: loan.model.ts
challenge_3/frontend/src/app/features/loans/services/: loan.service.ts
challenge_3/frontend/src/app/features/members/components/: member-edit.component.html  member-edit.component.scss  (+7 more)
(+2 files in other folders)
