[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]
