[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.119.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.2",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]
